Add mixed mode to Ethash rule, stick cached epochs to best block